syntax = "proto3";

package proto;
import "google/api/annotations.proto";
import "message.proto";
import "summary.proto";

service SummaryService{
  rpc CreateSummary(CreateSummaryRequest) returns (CreateSummaryResponse){
    option (google.api.http) = {
      post: "/summary"
      body: "*"
    };
  }
}